--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "eslint": "^8.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.19.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recess-order": "^2.5.0",
     "husky": "^7.0.2",
     "lint-staged": "^12.1.6",
     "prettier": "2.2.1",
+    "sass": "^1.46.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recess-order": "^2.5.0",
     "typescript": "^4.4.4",
     "unplugin-icons": "^0.12.16",
     "unplugin-vue-components": "^0.15.6",
