config: lint-staged
Signed-off-by: wcs <1103409364@qq.com>

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx,vue,md}": "eslint --fix",
-    "*.css": "stylelint --fix"
+    "*.{vue,css,scss}": "stylelint --fix"
   }
 }
