--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vue/composition-api": "^1.4.3",
     "@vueuse/core": "^7.5.3",
     "core-js": "^3.20.2",
+    "element-ui": "^2.15.6",
     "vue": "^2.6.14",
     "vue-demi": "^0.12.1",
     "vue-router": "^3.5.3"
@@ -35,7 +36,7 @@
     "stylelint-config-recess-order": "^2.5.0",
     "typescript": "^4.4.4",
     "unplugin-icons": "^0.12.16",
-    "unplugin-vue-components": "^0.15.6",
+    "unplugin-vue-components": "^0.17.11",
     "vite": "^2.6.7",
     "vite-plugin-vue2": "^1.9.0",
     "vite-plugin-windicss": "^1.4.11",
