--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@vue/composition-api": "^1.4.3",
     "@vueuse/core": "^7.5.3",
+    "axios": "^0.24.0",
     "core-js": "^3.20.2",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
     "vue": "^2.6.14",
     "vue-demi": "^0.12.1",
+    "vue-i18n": "^8.26.8",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
   },
