--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/js-cookie": "^3.0.1",
     "@vue/composition-api": "^1.4.3",
     "@vueuse/core": "^7.5.3",
     "axios": "^0.24.0",
     "core-js": "^3.20.2",
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
+    "jsencrypt": "^3.2.1",
+    "qs": "^6.10.2",
     "vue": "^2.6.14",
     "vue-demi": "^0.12.1",
     "vue-i18n": "^8.26.8",
@@ -24,6 +25,8 @@
   },
   "devDependencies": {
     "@iconify/json": "^1.1.415",
+    "@types/js-cookie": "^3.0.1",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-legacy": "^1.6.4",
