--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "husky": "^7.0.2",
     "lint-staged": "^12.1.6",
     "prettier": "2.2.1",
-    "sass": "^1.46.0",
+    "sass": "~1.46.0",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.5.0",
