--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "^7.19.1",
     "husky": "^7.0.2",
     "lint-staged": "^12.1.6",
+    "mockjs": "^1.1.0",
     "prettier": "2.2.1",
     "sass": "^1.46.0",
     "stylelint": "^13.13.1",
@@ -50,6 +51,7 @@
     "unplugin-icons": "^0.12.16",
     "unplugin-vue-components": "^0.17.11",
     "vite": "^2.6.7",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vue2": "^1.9.0",
     "vite-plugin-windicss": "^1.4.11",
     "vue-template-compiler": "^2.6.14"
