--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.2.1",
+    "nprogress": "^0.2.0",
     "qs": "^6.10.2",
     "vue": "^2.6.14",
     "vue-demi": "^0.12.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@iconify/json": "^1.1.415",
     "@types/js-cookie": "^3.0.1",
+    "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
