--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.415",
     "@types/js-cookie": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
@@ -50,10 +49,10 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.5.0",
     "typescript": "^4.4.4",
-    "unplugin-icons": "^0.12.16",
     "unplugin-vue-components": "^0.17.11",
     "vite": "^2.6.7",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-svg-icons": "^1.1.0",
     "vite-plugin-vue2": "^1.9.0",
     "vite-plugin-windicss": "^1.4.11",
     "vue-template-compiler": "^2.6.14"
