--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "streetsidesoftware.code-spell-checker",
-    "misterj.vue-volar-extention-pack"
+    "misterj.vue-volar-extention-pack",
+    "dariofuzinato.vue-peek"
   ]
 }
