--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "@types/js-cookie": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-legacy": "^1.6.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^8.0.0",
-    "eslint": "^8.0.1",
+    "@vue/runtime-dom": "^3.2.31",
+    "eslint": "^8.10.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^7.19.1",
+    "eslint-plugin-vue": "^8.5.0",
     "husky": "^7.0.2",
     "lint-staged": "^12.1.6",
     "mockjs": "^1.1.0",
@@ -50,6 +51,7 @@
     "stylelint-config-recess-order": "^2.5.0",
     "typescript": "^4.4.4",
     "unplugin-vue-components": "^0.17.11",
+    "unplugin-vue2-script-setup": "^0.10.0",
     "vite": "^2.6.7",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-icons": "^1.1.0",
