chore: 更新依赖版本
Signed-off-by: wcs <1103409364@qq.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
   "recommendations": [
     "streetsidesoftware.code-spell-checker",
-    "misterj.vue-volar-extention-pack",
-    "dariofuzinato.vue-peek"
+    "misterj.vue-volar-extention-pack"
   ]
 }
