--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "reinstall": "rm -rf node_modules && pnpm install"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^1.3.4",
     "core-js": "^3.20.2",
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
@@ -32,10 +32,10 @@
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-legacy": "^1.6.4",
+    "@vitejs/plugin-legacy": "^4.0.1",
+    "@vitejs/plugin-vue2": "^2.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^8.0.0",
-    "@vue/runtime-dom": "^3.2.31",
     "eslint": "^8.10.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
@@ -48,14 +48,12 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.5.0",
     "typescript": "^4.4.4",
-    "unplugin-vue-components": "^0.17.11",
-    "unplugin-vue2-script-setup": "^0.10.0",
-    "vite": "^2.6.7",
+    "unplugin-vue-components": "^0.24.0",
+    "vite": "^4.1.4",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-svg-icons": "^1.1.0",
-    "vite-plugin-vue2": "^1.9.0",
-    "vite-plugin-windicss": "^1.4.11",
-    "vue-template-compiler": "^2.6.14"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-windicss": "^1.8.10",
+    "vue-template-compiler": "^2.7.14"
   },
   "lint-staged": {
     "*.{js,ts,tsx,vue}": "eslint --fix",
