--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "vueCompilerOptions": {
-    "experimentalCompatMode": 2
+    "target": 2.7
   },
   "include": [
     "src/**/*.ts",
